--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@
         }
         .popup-content {
             background-color: #F7DC6F;
+            opacity: 0.9;
             margin: 10% auto;
             padding: 20px;
             border: transparent;
@@ -454,11 +455,11 @@
         }
         .popup-content button {
             display: block;
-            margin: 0 auto;
+            margin: 10px auto;
             color:#F7DC6F;
             background-color: #04AA6D; /* Green */
             cursor: pointer;
-            border-radius: 12px;
+            border-radius: 16px;
 
         }
         .show {
