--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             </div>
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center">
-                        <a href="https://pakkiyick.tumblr.com/" data-toggle="tooltip" data-placement="right" title="English Online Diary ">
+                        <a href="https://pakkiyick.tumblr.com/" data-toggle="tooltip" data-placement="right" title="English Online Diary">
                           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 48 48">
                             <path fill="#01579B" d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5V37z"></path><path fill="#FFF" d="M32,34.891c0,0.095-0.037,0.184-0.109,0.247C31.803,35.215,29.723,37,24.947,37c-5.726,0-5.893-6.409-5.893-7.141L19,22h-2.672C16.146,22,16,21.853,16,21.671V18.57c0-0.135,0.083-0.259,0.208-0.309c0.052-0.02,5.171-2.083,5.171-6.933c0-0.183,0.146-0.329,0.327-0.329h2.966C24.854,11,25,11.146,25,11.329V18h5.67c0.182,0,0.33,0.146,0.33,0.328v3.345C31,21.856,30.852,22,30.67,22H25v7.711c0,0.101,0.316,2.519,2.76,2.519c2.023,0,3.721-1.044,3.74-1.055c0.1-0.064,0.227-0.066,0.333-0.009C31.936,31.223,32,31.334,32,31.455V34.891L32,34.891z"></path>
                             </svg></a>
@@ -943,8 +943,8 @@
                 <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="p-lg-5 ps-lg-0">
                         <!--<p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Amber</p>-->
-                        <img id="image" class="corner" src="img/AmberHeard.jpg">
-                        <button type="button" onclick="show()" id="btnID" class="btn btn-outline-success rounded-pill">Amber</button>
+                        <a href="https://www.imdb.com/name/nm1720028/"><img id="image" class="corner" src="img/AmberHeard.jpg"></a>
+                        <button type="button" onclick="show()" id="btnID" class="btn btn-outline-success rounded-pill" data-toggle="tooltip" data-placement="right" title="The Most Beautiful Amber">Amber</button>
                         <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
