--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
         }
     Full Screen End*/
 
+/* div Start */
+#sidebar {
+    float: right;
+}
+/* div End */
+
 /* hr style Start */
     hr {  
             height: 4px;  
@@ -821,6 +827,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <img width="85" height="85" src="gif/fossilGIF.gif" style="width:100px;height:100px;">
                 <!--<p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Dinosaurs</p>-->
                 <a href="https://www.nhm.ac.uk/discover/what-are-dinosaurs.html"><button type="button" class="btn btn-outline-success rounded-pill">Dinosaurs</button></a>
                 <div class="flip-card">
@@ -833,10 +840,9 @@
                       </div>
                     </div>
                 </div>
-              
                 <h1 style="color:green;">Most Popular Dinosaurs</h1>
             </div>
-
+            
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="box"><img src="img/Tyrannosaurus.jpg" alt="">
@@ -846,7 +852,7 @@
                             <h5  style="color:greenyellow;"><b>Lived: North America</b></h5>
                         </div>
                         <ul class="icon">
-                            <li><a href="#"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
+                            <li><a href="gif/SpinosaurusGIF.gif"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Length: 12 m long</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Eats: Meat</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Speed: 29 km/h</b></h5>
@@ -861,7 +867,7 @@
                             <h5  style="color:greenyellow;"><b>Lived: Europe and the USA</b></h5>
                         </div>
                         <ul class="icon">
-                            <li><a href="#"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
+                            <li><a href="gif/StegosaurusGIF.gif"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Length: 10 m long</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Eats: Plants</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Speed: 7 km/h</b></h5>
@@ -876,7 +882,7 @@
                             <h5  style="color:greenyellow;"><b>Lived: Egypt and Morocco</b></h5>
                         </div>
                         <ul class="icon">
-                            <li><a href="#"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
+                            <li><a href="gif/SpinosaurusGIF.gif"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Length: 17 m long</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Eats: Fish</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Speed: 24 km/h</b></h5>
@@ -951,7 +957,8 @@
                                 <img width="70" height="70" src="https://img.icons8.com/external-flat-icons-maxicons/85/external-age-the-lost-world-flat-flat-icons-maxicons.png" style="width:85px;height:85px;">
                               </div>
                               <div class="flip-card-back">
-                                <img width="100" height="100" src="https://img.icons8.com/carbon-copy/100/FAB005/ring-and-earrings.png" style="width:85px;height:85px;">
+                                <!--<img width="100" height="100" src="https://img.icons8.com/carbon-copy/100/FAB005/ring-and-earrings.png" style="width:85px;height:85px;">-->
+                                <img width="100" height="100" src="img/dinosaur-fossil.png" style="width:85px;height:85px;">
                               </div>
                             </div>
                         </div>
