--- a/index.html
+++ b/index.html
@@ -56,12 +56,6 @@
         }
     Full Screen End*/
 
-/* div Start */
-#sidebar {
-    float: right;
-}
-/* div End */
-
 /* hr style Start */
     hr {  
             height: 4px;  
@@ -852,7 +846,7 @@
                             <h5  style="color:greenyellow;"><b>Lived: North America</b></h5>
                         </div>
                         <ul class="icon">
-                            <li><a href="gif/SpinosaurusGIF.gif"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
+                            <li><a href="gif/T-RexGIF.gif"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Length: 12 m long</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Eats: Meat</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Speed: 29 km/h</b></h5>
@@ -898,7 +892,7 @@
                             
                         </div>
                         <ul class="icon">
-                            <li><a href="#"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
+                            <li><a href="gif/TriceratopsGIF.gif"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Length: 9 m long</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Eats: Plants</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Speed: 8 km/h</b></h5>
@@ -913,7 +907,7 @@
                             <h5  style="color:greenyellow;"><b>Lived: North America</b></h5>
                         </div>
                         <ul class="icon">
-                            <li><a href="#"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
+                            <li><a href="gif/ElasmosaurusGIF.gif"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Length: 10 m long</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Eats: Fish and Marine Animals</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Swimming Speed: 5 km/h</b></h5>
@@ -928,7 +922,7 @@
                             <h5  style="color:greenyellow;"><b>Lived: Mongolia</b></h5>
                         </div>
                         <ul class="icon">
-                            <li><a href="#"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
+                            <li><a href="gif/VelociraptorGIF.gif"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Length: 2 m long</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Eats: Plants, Eggs and Insects</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Speed: 40 km/h</b></h5>>
