--- a/index.html
+++ b/index.html
@@ -599,10 +599,13 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><img width="58" height="58" src="https://img.icons8.com/external-icongeek26-outline-gradient-icongeek26/64/000000/external-dragon-chinese-icongeek26-outline-gradient-icongeek26.png" style="width:58px;height:58px;"></a>
+                    <!--<a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><img width="58" height="58" src="https://img.icons8.com/external-icongeek26-outline-gradient-icongeek26/64/000000/external-dragon-chinese-icongeek26-outline-gradient-icongeek26.png" style="width:58px;height:58px;"></a>-->
+                    <!--<a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><img width="80" height="80" src="img/Dragon 27.png" style="width:80px;height:80px;" float="left"></a> -->
+                    <a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><img src="img/Dragon 27.png" style="float:right;width:70px;height:70px;"></a> 
+                    
                 </div>
                 <div class="flip-card-back">
-                    <a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><p class="kai" style="color:red;">龍</p></a>
+                    <a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><p class="kai" style="color:green;">龍</p></a>
                 </div>
                 </div>
             </div>
@@ -1049,6 +1052,7 @@
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <!--<p class="d-inline-block border rounded-pill py-1 px-4" style="color:green;">Paleozoic Era</p>-->
                 <!--<div class="team-social text-center">-->
+                    <img width="85" height="85" src="gif/fossil2GIF.gif" style="width:85px;height:85px;">
                     <p class="d-inline-block"><button id="myButton" type="button" class="btn btn-outline-success rounded-pill">Paleozoic Era</button></p>
                     <div id="myPopup" class="popup">
                         <div class="popup-content corner">
