--- a/index.html
+++ b/index.html
@@ -575,12 +575,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a class="page-scroll nav-item nav-link" href="#Mesozoic">Mesozoic</a>
-                <a class="page-scroll nav-item nav-link" href="#Animation">Animation</a>
-                <a class="page-scroll nav-item nav-link" href="#Dinosaurs">Dinosaurs</a>
-                <a class="page-scroll nav-item nav-link" href="#Fossils">Fossils</a>
-                <a class="page-scroll nav-item nav-link" href="#Paleozoic">Paleozoic</a>     
+                <a href="index.html" class="nav-item nav-link active"><b>Home</b></a>
+                <a class="page-scroll nav-item nav-link" href="#Mesozoic" style="color:red;"><b>Mesozoic</b></a>
+                <a class="page-scroll nav-item nav-link" href="#Animation" style="color:blue;"><b>Animation</b></a>
+                <a class="page-scroll nav-item nav-link" href="#Dinosaurs" style="color:rgb(214, 12, 137);"><b>Dinosaurs</b></a>
+                <a class="page-scroll nav-item nav-link" href="#Fossils" style="color:purple;"><b>Fossils</b></a>
+                <a class="page-scroll nav-item nav-link" href="#Paleozoic" style="color:rgb(230, 90, 9);"><b>Paleozoic</b></a>     
                   
                 <!--<div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
