--- a/index.html
+++ b/index.html
@@ -594,17 +594,20 @@
                 </div>-->
             </div>
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-          
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                <div class="flip-card-front">
-                    <a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><img src="img/Dragon 27.png" style="float:right;width:70px;height:70px;"></a>  
+                <div><a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><img width="70" height="70" style="padding-right:30px" data-toggle="tooltip" data-placement="right" title="Red Leaves"
+                    src="https://img.icons8.com/external-chloe-kerismaker/64/external-Leaves-autumn-chloe-kerismaker.png"></a></div>
+                <div><a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><img width="70" height="70" style="padding-right:30px" data-toggle="tooltip" data-placement="right" title="Christmas"
+                    src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-christmas-wreath-christmas-day-justicon-flat-justicon.png"></a></div>
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><img src="img/Dragon 27.png" style="float:right;width:70px;height:70px;"></a>  
+                        </div>
+                        <div class="flip-card-back">
+                            <a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><p class="kai" style="color:green;">龍</p></a>
+                        </div>
+                    </div>
                 </div>
-                <div class="flip-card-back">
-                    <a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><p class="kai" style="color:green;">龍</p></a>
-                </div>
-                </div>
-            </div>
             </div>
         </div>
     </nav>
@@ -942,7 +945,7 @@
                 <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="p-lg-5 ps-lg-0">
                         <!--<p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Amber</p>-->
-                        <a href="https://www.imdb.com/name/nm1720028/"><img id="image" class="corner" src="img/AmberHeard.jpg"></a>
+                        <a href="https://www.imdb.com/name/nm1720028/"><img id="image" class="corner" data-toggle="tooltip" data-placement="right" title="The Most Beautiful Amber" src="img/AmberHeard.jpg"></a>
                         <button type="button" onclick="show()" id="btnID" class="btn btn-outline-success rounded-pill" data-toggle="tooltip" data-placement="right" title="The Most Beautiful Amber">Amber</button>
                         <div class="flip-card">
                             <div class="flip-card-inner">
