--- a/index.html
+++ b/index.html
@@ -594,9 +594,9 @@
                 </div>-->
             </div>
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <div><a href="https://metternich1848.github.io/Christmas/Red%20Leaves.html"><img width="70" height="70" style="padding-right:30px" data-toggle="tooltip" data-placement="right" title="Red Leaves"
+                <div><a href="https://metternich1848.github.io/Christmas/Red%20Leaves.html"><img width="50" height="50" style="padding-right:30px; width:90px;height:60px;" data-toggle="tooltip" data-placement="right" title="Red Leaves"
                     src="https://img.icons8.com/external-chloe-kerismaker/64/external-Leaves-autumn-chloe-kerismaker.png"></a></div>
-                <div><a href="https://metternich1848.github.io/Christmas/"><img width="70" height="70" style="padding-right:30px" data-toggle="tooltip" data-placement="right" title="Christmas"
+                <div><a href="https://metternich1848.github.io/Christmas/"><img width="40" height="40" style="padding-right:30px;width:90px;height:60px;" data-toggle="tooltip" data-placement="right" title="Christmas"
                     src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-christmas-wreath-christmas-day-justicon-flat-justicon.png"></a></div>
                 <div class="flip-card">
                     <div class="flip-card-inner">
