--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/Hallucigenia.jpg" alt="">
+                            <a href="https://en.wikipedia.org/wiki/Hallucigenia"><img class="img-fluid" src="img/Hallucigenia.jpg" alt=""></a>
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Hallucigenia</h5>
@@ -1098,7 +1098,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/Anomalocaris.jpg" alt="">
+                            <a href="https://en.wikipedia.org/wiki/Anomalocaris"><img class="img-fluid" src="img/Anomalocaris.jpg" alt=""></a>
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Anomalocaris</h5>
@@ -1113,7 +1113,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/Trilobita.jpg" alt="">
+                            <a href="https://en.wikipedia.org/wiki/Trilobite"><img class="img-fluid" src="img/Trilobita.jpg" alt=""></a>
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Trilobite</h5>
@@ -1128,7 +1128,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/Ammonoidea.jpg" alt="">
+                            <a href="https://en.wikipedia.org/wiki/Ammonoidea"><img class="img-fluid" src="img/Ammonoidea.jpg" alt=""></a>
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Ammonite</h5>
