--- a/index.html
+++ b/index.html
@@ -637,21 +637,21 @@
                 <div class="row g-4">
                     <div class="col-sm-4">
                         <div class="border-start border-light ps-4">
-                            <h1 class="text-danger mb-0">Triassic</h1>
+                            <a href="https://en.wikipedia.org/wiki/Triassic"><h1 class="text-danger mb-0">Triassic</h1></a>
                             <h2 class="text-white mb-1" data-toggle="counter-up">250</h2>
                             <p class="text-light mb-0">million years ago</p>
                         </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="border-start border-light ps-4">
-                            <h1 class="text-info mb-0">Jurassic</h1>
+                            <a href="https://en.wikipedia.org/wiki/Jurassic"><h1 class="text-info mb-0">Jurassic</h1></a>
                             <h2 class="text-white mb-1" data-toggle="counter-up">200</h2>
                             <p class="text-light mb-0">million years ago</p>
                         </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="border-start border-light ps-4">
-                            <h1 class="text-warning mb-0">Cretaceous</h1>
+                            <a href="https://en.wikipedia.org/wiki/Cretaceous"><h1 class="text-warning mb-0">Cretaceous</h1></a>
                             <h2 class="text-white mb-1" data-toggle="counter-up">145</h2>
                             <p class="text-light mb-0">million years ago</p>
                         </div>
@@ -765,7 +765,7 @@
                         <iframe width="630" height="353" class="corner" src="https://www.youtube.com/embed/Do6k1sefCxY?si=2oqepjPFF4_3sUlx" title="YouTube video player" frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
-                    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                    <a href="https://taxian.my.canva.site/titanosaur"><div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s"></div</a>
                         <div class="slider">
                             <div class="slide-track">
                                 <div class="slide">
@@ -823,7 +823,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <img width="85" height="85" src="gif/fossil2GIF.gif" style="width:100px;height:100px;">
+                <a href="https://taxian.my.canva.site/pterosaurs"><img width="85" height="85" src="gif/fossil2GIF.gif" style="width:100px;height:100px;"></a>
                 <!--<p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Dinosaurs</p>-->
                 <a href="https://www.nhm.ac.uk/discover/what-are-dinosaurs.html"><button type="button" class="btn btn-outline-success rounded-pill">Dinosaurs</button></a>
                 <div class="flip-card">
