--- a/index.html
+++ b/index.html
@@ -601,10 +601,10 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><img src="img/Dragon 27.png" style="float:right;width:70px;height:70px;"></a>  
+                            <a href="https://taxian.my.canva.site/dragon"><img src="img/Dragon 27.png" style="float:right;width:70px;height:70px;"></a>  
                         </div>
                         <div class="flip-card-back">
-                            <a href="https://www.youtube.com/watch?v=NfIe2WmQD5E"><p class="kai" style="color:green;">龍</p></a>
+                            <a href="https://taxian.my.canva.site/dragon"><p class="kai" style="color:green;">龍</p></a>
                         </div>
                     </div>
                 </div>
