--- a/Webpages/ChineseDragon.html
+++ b/Webpages/ChineseDragon.html
@@ -7,20 +7,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-      /* Full Screen Start*/
-      .bg {
-            position: fixed;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            z-index: -999;
-        }
-        .bg img {
+        html {
             height: 100%;
-            width: 100%;
         }
-    /* Full Screen End*/
+
+        body {
+            background-image: url(background.jpg);
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
+            background-size: cover;
+        }
 
 </style>
 
