--- a/Webpages/ChineseDragon.html
+++ b/Webpages/ChineseDragon.html
@@ -6,26 +6,24 @@
         <link rel="icon" type="image/png" href="ChineseDragon/Dragon 27.png"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<style>
-        html {
-            height: 100%;
-        }
-
-        body {
-            background-image: url(background.jpg);
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: center;
-            background-size: cover;
-        }
-
-</style>
-
+    <!-- CSS -->
+        <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     </head>
 
+<style>
+/* 大型背景影像 */
+.big-bg {
+    background-size: cover;
+    background-position: center top;
+    background-repeat: no-repeat;
+}
+</style>
+
     <body>
-        <div class="bg">
-            <img src="ChineseDragon/ChineseDragon.png">
-        </div>
+            <div class="big-bg">
+                <img src="ChineseDragon/ChineseDragon.png">
+            </div>
+
     </body>
 </html>
