--- a/index.html
+++ b/index.html
@@ -594,11 +594,15 @@
                 </div>-->
             </div>
             <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <div><a href="https://pakkiyick.wixsite.com/newyear"><img width="50" height="50" style="padding-right:30px; width:90px;height:60px;" data-toggle="tooltip" data-placement="right" title="Red Leaves"
+                    src="img/Dragon.png"></a></div>
+                <div><a href="https://alientopia.mobirisesite.com/"><img width="50" height="50" style="padding-right:30px; width:90px;height:60px;" data-toggle="tooltip" data-placement="right" title="Red Leaves"
+                    src="img/valentines-day.png"></a></div>    
                 <div><a href="https://metternich1848.github.io/Christmas/Red%20Leaves.html"><img width="50" height="50" style="padding-right:30px; width:90px;height:60px;" data-toggle="tooltip" data-placement="right" title="Red Leaves"
                     src="https://img.icons8.com/external-chloe-kerismaker/64/external-Leaves-autumn-chloe-kerismaker.png"></a></div>
                 <div><a href="https://metternich1848.github.io/Christmas/"><img width="40" height="40" style="padding-right:30px;width:90px;height:60px;" data-toggle="tooltip" data-placement="right" title="Christmas"
                     src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-christmas-wreath-christmas-day-justicon-flat-justicon.png"></a></div>
-                <div class="flip-card">
+                <!--<div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <a href="Webpages/ChineseDragon.html"><img src="img/Dragon 27.png" style="float:right;width:70px;height:70px;"></a>  
@@ -607,7 +611,7 @@
                             <a href="Webpages/ChineseDragon.html"><p class="kai" style="color:green;">龍</p></a>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
     </nav>
