--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+        <a href="https://alientopia.clicksitepages.com/dinotopia" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <h1 class="m-0 text-success"><i class="fa fa-paw" aria-hidden="true"></i>Dinotopia</h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -600,7 +600,7 @@
                     src="img/valentines-day.png"></a></div>
                 <div><a href="https://metternich1848.github.io/Sakura/"><img width="50" height="50" style="padding-right:30px; width:90px;height:60px;" data-toggle="tooltip" data-placement="right" title="Red Leaves"
                     src="img/icons8-sakura-94.png"></a></div>      
-                <div><a href="https://metternich1848.github.io/RedLeaves/"><img width="50" height="50" style="padding-right:30px; width:90px;height:60px;" data-toggle="tooltip" data-placement="right" title="Red Leaves"
+                <div><a href="https://metternich1848.github.io/Christmas/Red%20Leaves.html"><img width="50" height="50" style="padding-right:30px; width:90px;height:60px;" data-toggle="tooltip" data-placement="right" title="Red Leaves"
                     src="https://img.icons8.com/external-chloe-kerismaker/64/external-Leaves-autumn-chloe-kerismaker.png"></a></div>
                 <div><a href="https://metternich1848.github.io/Christmas/"><img width="40" height="40" style="padding-right:30px;width:90px;height:60px;" data-toggle="tooltip" data-placement="right" title="Christmas"
                     src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-christmas-wreath-christmas-day-justicon-flat-justicon.png"></a></div>
